--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".sections.expense_section.ExpenseDetail"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_expense_detail"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
